--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,8 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --primary-color: #ff8229;
-  --secondary-color: #ff9933;
+  --primary-color: #FF8229;
+  --secondary-color: #F8A047;
   --heading-color: #0b2727;
   --text-color: #6e7074;
   --font-name: "Montserrat", sans-serif;
@@ -37,6 +37,7 @@ a {
   text-decoration: none;
   color: unset;
 }
+
 ul {
   list-style: none;
 }
@@ -53,9 +54,11 @@ ul {
   text-decoration: none;
   color: #fff;
 }
+
 .primary__btn a:hover {
   color: inherit;
 }
+
 .secondary__btn {
   background: transparent !important;
   color: #0b2727 !important;
@@ -84,4 +87,28 @@ ul {
   font-weight: 500;
   font-size: 1.7rem;
   color: var(--heading-color);
+}
+
+@media only screen and (max-width:992px) {
+
+  .primary__btn a,
+  .secondary__btn a {
+    font-size: 0.9rem;
+  }
+
+  .btn-dark,
+  .primary__btn,
+  .secondary__btn {
+    padding: 0.2rem 1.1rem !important;
+  }
+
+  section {
+    padding: 40px 0;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .section__subtitle {
+    font-size: 1.3rem;
+  }
 }
