--- a/client/src/shared/search-bar.css
+++ b/client/src/shared/search-bar.css
@@ -8,26 +8,25 @@
 
 .form__group span {
   font-size: 1.8rem;
-  color: #ee6e6e;
+  color: var(--primary-color)
 }
 
 .form__group input {
   border: none;
-  font-size: .9rem;
+  font-size: 0.9rem;
   color: var(--heading-color);
-  font-weight: 500;
 }
 
 .form__group input:focus {
   outline: none;
 }
 
-.form__group h6 {
-  margin-bottom: 0;
+.form__group-fast {
+  border-right: 2px solid #ddd;
 }
 
-.form__group-fast {
-  border-right: 1px solid #ddd;
+.form__group h6 {
+  margin-bottom: 0;
 }
 
 .search__icon i {
@@ -37,4 +36,41 @@
   color: #fff;
   border-radius: 10px 5px 10px 5px;
   cursor: pointer;
+}
+
+@media only screen and (max-width:992px) {
+  .search__bar {
+    width: 100%;
+    border-radius: 2rem;
+  }
+
+  .search__bar form {
+    flex-wrap: wrap;
+  }
+
+  .search__bar form .form__group {
+    width: 48%;
+  }
+
+  .form__group-fast {
+    border: none;
+  }
+}
+
+@media only screen and (max-width:576px) {
+  .search__bar form .form__group {
+    width: 100%;
+  }
+
+  .form__group input {
+    font-size: 0.7rem;
+  }
+
+  .form__group span i {
+    font-size: 1.1rem;
+  }
+
+  .form__group h6 {
+    font-size: 1rem;
+  }
 }
