--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -39,14 +39,14 @@
 }
 
 .section__subtitle {
-  color:#eee;
+  color: #eee;
   padding-left: 1rem;
 }
 
 .services__subtitle {
   font-size: 2rem;
   font-weight: 500;
-  color: #ee6e6e;
+  color: var(--primary-color);
   font-family: var(--subtitle-font-name);
 }
 
@@ -123,4 +123,44 @@
 .testimonial__title {
   font-size: 2.3rem;
   margin-top: 1rem;
+}
+
+@media only screen and (max-width: 992px) {
+  .hero__content h1 {
+    font-size: 2.7rem;
+  }
+
+  .hero__img-box {
+    display: none;
+  }
+
+  .hero__video-box {
+    display: block;
+  }
+
+  .services__title,
+  .featured__tour-title,
+  .gallery__title,
+  .testimonial__title,
+  .experience__content h2 {
+    font-size: 2rem;
+  }
+
+  .experience__img {
+    margin-top: 2rem;
+  }
+}
+
+@media only screen and (max-width: 576px) {
+  .hero__content h1 {
+    font-size: 1.8rem;
+  }
+
+  .services__title,
+  .featured__tour-title,
+  .gallery__title, 
+  .testimonial__title,
+  .experience__content h2 {
+    font-size: 1.5rem;
+  }
 }
