--- a/client/src/styles/login.css
+++ b/client/src/styles/login.css
@@ -71,3 +71,14 @@
     margin-left: 5px;
     font-weight: 500;
 }
+
+@media only screen and (max-width: 768px) {
+    .login__img {
+        display: none;
+    }
+
+    .login__form {
+        width: 100%;
+        margin: auto;
+    }
+}
