--- a/client/src/styles/home.css
+++ b/client/src/styles/home.css
@@ -88,7 +88,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: var(--primary-color);
+  background: var(--secondary-color);
   color: #eee;
   font-size: 1.6rem;
   font-weight: 600;
@@ -158,7 +158,7 @@
 
   .services__title,
   .featured__tour-title,
-  .gallery__title, 
+  .gallery__title,
   .testimonial__title,
   .experience__content h2 {
     font-size: 1.5rem;
