--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,7 +2,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap");
 
 :root {
-  --primary-color: #FF8229;
+  --primary-color: #FFA047;
   --secondary-color: #F8A047;
   --heading-color: #0b2727;
   --text-color: #6e7074;
